--- a/app/src/main/res/layout/cadastro.xml
+++ b/app/src/main/res/layout/cadastro.xml
@@ -21,7 +21,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutCadastro"
         android:layout_width="315dp"
-        android:layout_height="499dp"
+        android:layout_height="550dp"
         android:background="@drawable/rounded_login_ui"
         android:backgroundTint="@color/login_fundo"
         android:padding="20dp"
@@ -35,7 +35,7 @@
         app:layout_constraintVertical_bias="0.86">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/layoutEmail"
+            android:id="@+id/layoutNome"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -45,14 +45,102 @@
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.6"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/imgNome"
+                android:layout_width="35dp"
+                android:layout_height="37dp"
+                android:soundEffectsEnabled="false"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.06"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_pessoa"
+                tools:srcCompat="@drawable/ic_pessoa" />
+
+            <EditText
+                android:id="@+id/txtNome"
+                android:layout_width="151dp"
+                android:layout_height="40dp"
+                android:fontFamily="@font/jetbrains_mono_thin"
+                android:hint="nome"
+                android:imeOptions="actionNext"
+                android:singleLine="true"
+                android:textColor="#80000000"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.64"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutSobrenome"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="68dp"
+            android:background="@drawable/rounded_login_ui"
+            android:backgroundTint="@color/fundo"
+            android:paddingLeft="0dp"
+            android:paddingTop="0dp"
+            android:paddingBottom="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/imgSobreome"
+                android:layout_width="35dp"
+                android:layout_height="37dp"
+                android:soundEffectsEnabled="false"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.06"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_pessoa"
+                tools:srcCompat="@drawable/ic_pessoa" />
+
+            <EditText
+                android:id="@+id/txtSobrenome"
+                android:layout_width="151dp"
+                android:layout_height="40dp"
+                android:fontFamily="@font/jetbrains_mono_thin"
+                android:hint="sobrenome"
+                android:imeOptions="actionNext"
+                android:singleLine="true"
+                android:textColor="#80000000"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.64"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutEmail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="120dp"
+            android:background="@drawable/rounded_login_ui"
+            android:backgroundTint="@color/fundo"
+            android:paddingLeft="0dp"
+            android:paddingTop="0dp"
+            android:paddingBottom="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.525"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 android:id="@+id/imgEmail"
-                android:layout_width="44dp"
-                android:layout_height="46dp"
+                android:layout_width="35dp"
+                android:layout_height="37dp"
                 android:soundEffectsEnabled="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +153,7 @@
             <EditText
                 android:id="@+id/txtEmail"
                 android:layout_width="151dp"
-                android:layout_height="56dp"
+                android:layout_height="40dp"
                 android:fontFamily="@font/jetbrains_mono_thin"
                 android:hint="email"
                 android:imeOptions="actionNext"
@@ -80,68 +168,24 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/ConfirmarEmail"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/rounded_login_ui"
-            android:backgroundTint="@color/fundo"
-            android:paddingLeft="0dp"
-            android:paddingTop="0dp"
-            android:paddingBottom="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/layoutEmail">
-
-            <ImageView
-                android:id="@+id/imgConfirmarEmail"
-                android:layout_width="44dp"
-                android:layout_height="46dp"
-                android:soundEffectsEnabled="false"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.06"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_pessoa"
-                tools:srcCompat="@drawable/ic_pessoa" />
-
-            <EditText
-                android:id="@+id/txtConfirmarEmail"
-                android:layout_width="151dp"
-                android:layout_height="56dp"
-                android:fontFamily="@font/jetbrains_mono"
-                android:hint="confirmar email"
-                android:singleLine="true"
-                android:textColor="#80000000"
-                android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.646"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cpf"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:background="@drawable/rounded_login_ui"
             android:backgroundTint="@color/fundo"
             android:paddingLeft="0dp"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
+            app:layout_constraintHorizontal_bias="0.525"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ConfirmarEmail">
 
             <ImageView
                 android:id="@+id/imgCpf"
-                android:layout_width="44dp"
-                android:layout_height="46dp"
+                android:layout_width="35dp"
+                android:layout_height="37dp"
                 android:soundEffectsEnabled="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -154,7 +198,7 @@
             <EditText
                 android:id="@+id/txtCpf"
                 android:layout_width="151dp"
-                android:layout_height="56dp"
+                android:layout_height="40dp"
                 android:fontFamily="@font/jetbrains_mono"
                 android:hint="cpf"
                 android:singleLine="true"
@@ -172,20 +216,21 @@
             android:id="@+id/senha"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:background="@drawable/rounded_login_ui"
             android:backgroundTint="@color/fundo"
             android:paddingLeft="0dp"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.525"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cpf">
 
             <ImageView
                 android:id="@+id/imgSenha"
-                android:layout_width="44dp"
-                android:layout_height="46dp"
+                android:layout_width="35dp"
+                android:layout_height="37dp"
                 android:soundEffectsEnabled="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -198,7 +243,7 @@
             <EditText
                 android:id="@+id/txtSenha"
                 android:layout_width="151dp"
-                android:layout_height="56dp"
+                android:layout_height="40dp"
                 android:fontFamily="@font/jetbrains_mono"
                 android:hint="senha"
                 android:singleLine="true"
@@ -216,20 +261,21 @@
             android:id="@+id/ConfirmarSenha"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="12dp"
             android:background="@drawable/rounded_login_ui"
             android:backgroundTint="@color/fundo"
             android:paddingLeft="0dp"
             android:paddingTop="0dp"
             android:paddingBottom="0dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.525"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/senha">
 
             <ImageView
                 android:id="@+id/imgConfirmarSenha"
-                android:layout_width="44dp"
-                android:layout_height="46dp"
+                android:layout_width="35dp"
+                android:layout_height="37dp"
                 android:soundEffectsEnabled="false"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -242,9 +288,54 @@
             <EditText
                 android:id="@+id/txtConfirmarSenha"
                 android:layout_width="151dp"
-                android:layout_height="56dp"
+                android:layout_height="40dp"
                 android:fontFamily="@font/jetbrains_mono"
                 android:hint="confirmar senha"
+                android:singleLine="true"
+                android:textColor="#80000000"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.646"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/ConfirmarEmail"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/rounded_login_ui"
+            android:backgroundTint="@color/fundo"
+            android:paddingLeft="0dp"
+            android:paddingTop="0dp"
+            android:paddingBottom="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.525"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/layoutEmail">
+
+            <ImageView
+                android:id="@+id/imgConfirmarEmail"
+                android:layout_width="35dp"
+                android:layout_height="37dp"
+                android:soundEffectsEnabled="false"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.06"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_pessoa"
+                tools:srcCompat="@drawable/ic_pessoa" />
+
+            <EditText
+                android:id="@+id/txtConfirmarEmail"
+                android:layout_width="151dp"
+                android:layout_height="40dp"
+                android:fontFamily="@font/jetbrains_mono"
+                android:hint="confirmar email"
                 android:singleLine="true"
                 android:textColor="#80000000"
                 android:textSize="12sp"
@@ -262,15 +353,17 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/jetbrains_mono"
             android:inputType="textCapSentences"
+            android:onClick="Cadastrar"
             android:text="Cadastrar"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:backgroundTint="@color/botao"
             app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.6"
+            app:layout_constraintHorizontal_bias="0.525"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ConfirmarSenha" />
+            app:layout_constraintTop_toBottomOf="@+id/ConfirmarSenha"
+            app:layout_constraintVertical_bias="0.857" />
 
         <Button
             android:id="@+id/btnCancelar"
